theme/static/css/main.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Noto Sans", sans-serif;
  margin: auto;
  padding: 20px;
  max-width: 720px;
  text-align: left;
  background-color: #fff;
  word-wrap: break-word;
  overflow-wrap: break-word;
  line-height: 1.5;
  color: #000;
  display: flex;
  flex-direction: column;
}

main {
  flex-grow: 1;
  line-height: 1.6;
}

footer {
  padding: 25px;
  text-align: center;
}

blockquote {
  background-color: #e6e9ef;
  border-left: 5px solid #179299;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: 20px 0;
}

a {
  color: #4169e1;
}

.title {
  text-decoration: none;
  border: 0;
  color: #000;
}

.title span {
  font-weight: 400;
}

nav a {
  margin-right: 10px;
}

textarea {
  width: 100%;
  font-size: 1rem;
}

input {
  font-size: 1rem;
}

article {
  hyphens: auto;
  text-align: justify;
}

hr {
  border: 0;
  border-top: 1px solid gray;
  margin: 1em 0;
}

table {
  width: 100%;
}

img {
  max-width: 100%;
}

pre,
kbd,
samp {
  font-family: "Noto Sans Mono", monospace;
  padding: 10px;
}

code {
  font-family: "Noto Sans Mono", monospace;
  line-height: 200%;
  font-size: 90%;
}

ul.blog-posts {
  list-style-type: none;
  padding: unset;
}

ul.blog-posts li {
  display: flex;
}

ul.blog-posts li span {
  flex: 0 0 130px;
}

.footnote-definition:target {
  background-color: #ffffe0;
}

.footnote-definition p {
  display: inline;
}

body.dark-theme {
  background-color: #1e1e2e;
}

body.dark-theme .subtitle {
  font-style: italic;
  color: #b8c0e0;
}

body.dark-theme,
body.dark-theme .title,
body.dark-theme #theme-toggle {
  color: #cdd6f4;
}

body.dark-theme pre {
  background-color: #181825 !important;
}

body.dark-theme a {
  color: #89b4fa;
}

body.dark-theme .footnote-definition:target {
  background-color: #fab387;
  color: #1e1e2e;
}

body.dark-theme .footnote-definition:target a {
  color: #74c7ec;
}

body.dark-theme .inverse {
  filter: invert(1);
}

body.dark-theme blockquote {
  background-color: #313244;
  border-left: 5px solid #eba0ac;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: 20px 0;
}

header {
  display: flex;
  flex-direction: column;
}

header .title-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header .title-bar #theme-toggle {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 1.5em;
  line-height: 1;
}

.book-gallery {
  display: flex;
  gap: 25px;
  flex-wrap: wrap;
}

@media (max-width: 768px) {
  .book-gallery {
    flex-direction: column;
    gap: 20px; /* Adjust gap for mobile if needed */
  }
}

.book-thumbnail {
  width: 100px;
  height: 150px;
}

.book-list > ul {
  list-style: none;
}

.book-list > ul > li {
  display: flex;
  margin-bottom: 3rem;
}

.book-list > ul > li > p {
  width: 100%;
  display: flex;
}

.book-list > ul > li > p > img {
  width: 100px;
  height: 150px;
  margin-right: 1em;
}

.book-list > ul > li > img {
  width: 100px;
  height: 150px;
  margin-right: 1em;
}

